--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-light bg-light justify-content-between">
+      <a class="navbar-brand" href="/articles">Wikinimous</a>
+      <a class="btn btn-outline-success my-2 my-sm-0" role="buttom" href="/articles/new">New Article</a>
+    </nav>
     <%= yield %>
   </body>
 </html>
