--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,6 @@
-<% @articles.each do |article| %>
-  <h2><%= link_to article.title, article %></h2> 
-  <p><%= article.content[0..100] %></p>
-<% end %>
+<div class="container">
+  <% @articles.each do |article| %>
+    <h2><%= link_to article.title, article %></h2> 
+    <p><%= article.content[0..100] %></p>
+  <% end %>
+</div>
